# yt-dlapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  yt-dlapi.code-workspace
.claude/: settings.local.json
src/yt_dlapi/: __init__.py  base_api_endpoint.py  constants.py  exceptions.py  protocol.py  update_files.py
src/yt_dlapi/_input/channel/: e158e486-558c-404a-aaca-b14654a235f1.json  fc6190d4-37ad-4deb-8e13-892b39e6ee2a.json
src/yt_dlapi/_input/channel_playlists/: 2e145c24-43ac-42ad-a253-16d71d97aa9a.json
src/yt_dlapi/_input/playlist/: 1d63a96f-d160-4a36-a977-6a85f763d2f5.json  742ca00f-4453-408b-befe-be9220a5b905.json  f77649c5-7e70-4fb1-9884-342e928cdeff.json
src/yt_dlapi/_input/playlist_videos/: 93292150-45f3-4397-a598-e3880d13808a.json  a25c41d3-e9ef-455f-8f34-d022d7dde9ae.json  e67eb9f6-7d35-4e23-a837-5f43508d7971.json
src/yt_dlapi/_input/video/: 1e0fac1e-4216-4f0f-87d7-f51f85a20871.json  27e6f8c8-a06a-42af-8398-bdcad0ce022c.json  6176f3c7-def8-484d-8e7e-9fdf70c57e89.json  76f41ac6-1a2f-4ef7-8c94-14f9fbc934a8.json  c93efa73-b1c0-40c8-a211-08b5749f9c64.json  dd91ca06-2dfc-4ebb-aa39-ce790ca05b21.json
src/yt_dlapi/_tools/: __init__.py  rebuild_models.py  remove_redundant_files.py
src/yt_dlapi/channel/: __init__.py  models.json  models.py  schema.json
src/yt_dlapi/channel_playlists/: __init__.py  models.json  models.py  schema.json
src/yt_dlapi/channel_releases/: __init__.py  models.json  models.py
src/yt_dlapi/playlist/: __init__.py  models.json  models.py  schema.json
src/yt_dlapi/playlist_videos/: __init__.py  models.json  models.py  schema.json
src/yt_dlapi/tools/: rebuild_models.py  remove_redundant_files.py
src/yt_dlapi/video/: __init__.py  models.json  models.py  schema.json
tests/: __init__.py  conftest.py  test_channel.py  test_channel_playlists.py  test_channel_releases.py  test_playlist.py  test_playlist_videos.py  test_video.py  test_yt_dlapi.py  utils.py
