[project]
name = "yt-dlapi"
version = "0.1.0"
description = "Unofficial YouTube API built on yt-dlp."
readme = "README.md"
authors = [
    { name = "ryn-cx", email = "262888154+ryn-cx@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "good-ass-pydantic-integrator",
    "yt-dlp>=2026.2.4",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Asserts should be allowed in tests.

[tool.uv.sources]
good-ass-pydantic-integrator = { git = "https://github.com/ryn-cx/good-ass-pydantic-integrator" }

[tool.uv.workspace]
members = [
    "src/yt_dlapi/yt-dlapi-files",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
